# BooleanDiffusion

./: .gitignore  CMakeLists.txt  readme.md
configs/: n2.brief.json  n2.json  n2_big.json  n3.json  sample.json
paper/: .gitignore  BooleanDiffusion.bib  abbrvnotitle.bst  supp.tex
scripts/: n2.sh
sim/: CMakeLists.txt  booldiffusion.cpp  rd_bool.h  rd_bool1.h  rd_bool2.h  rd_bool3.h
